Bug 473478 - Could not find font "Source Sans Pro"
Summary: Could not find font "Source Sans Pro"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.2.0-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-17 15:54 UTC by grum999
Modified: 2023-08-18 10:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Current settings (136.60 KB, image/png)
2023-08-17 17:24 UTC, grum999
Details
Touch docker (1.32 MB, image/png)
2023-08-17 18:48 UTC, grum999
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grum999 2023-08-17 15:54:23 UTC
SUMMARY
Testing Krita 5.2.0Beta2

In terminal, I have hundred of error message like this:
```
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Bold")
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Regular")
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Regular")
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Regular")
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Light")
krita.general: Could not find font QVariant(QString, "Source Sans Pro") with style QVariant(QString, "Regular")
```

STEPS TO REPRODUCE
1. Execute Krita 5.2.0Beta from terminal
2. Resize window 


OBSERVED RESULT
A lot of error message (were not present with 5.2.0beta1)

EXPECTED RESULT
Not error message 

SOFTWARE/OS VERSIONS
Krita
 Version: 5.2.0-beta2
 Hidpi: false
Qt
  Version (compiled): 5.15.7
  Version (loaded): 5.15.7

OS Information
  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.19.0-45-generic
  Pretty Productname: KDE neon 5.27
  Product Type: neon
  Product Version: 22.04
  Desktop: KDE
  Appimage build: Yes
Comment 1 Alvin Wong 2023-08-17 16:27:57 UTC
Question, is your Krita UI font also set to "Source Sans Pro"?
Comment 2 grum999 2023-08-17 17:24:46 UTC
Created attachment 161029 [details]
Current settings

No, the font doesn't seems to be my Krita UI font 
Also don't found any reference to it in kritarc file 

Also, if I switch back to krita 5.2.0beta1, the message are not here

I'm not sure if it's related, but I also have some QML error message in terminal I didn't had before beta2, like this:
```
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
```

If not related I can create another bug if needed
Comment 3 Alvin Wong 2023-08-17 17:45:43 UTC
Those messages would also have been printed in previous versions if not for the log docker (unintentionally) hiding most warning messages. It's likely a long standing problem that nobody noticed because of that.

That said, I am not able to reproduce this with normal setups... The only way I can cause that font message to be printed is to repack the AppImage with the fonts deleted. I don't really have any hypothesis on why it happens. A guess is perhaps some environment variables are confusing some QML stuff. Can you attach the output of `env` from the terminal, after checking and removing any sensitive information in it?

Also I'd like to know whether the touch docker works on your setup.
Comment 4 grum999 2023-08-17 17:55:42 UTC
I'm using AppImage execute from terminal from years now, I can confirm you that's the first time I see those messages.

Here's the env variables:

```
SHELL=/bin/bash
SESSION_MANAGER=local/Maetel:@/tmp/.ICE-unix/5581,unix/Maetel:/tmp/.ICE-unix/5581
WINDOWID=62914573
QT_ACCESSIBILITY=1
QT_SCREEN_SCALE_FACTORS=DVI-D-1=1;DP-1=1;DP-2=1;HDMI-1=1;DP-3=1;
COLORTERM=truecolor
XDG_CONFIG_DIRS=/home/grum/.config/kdedefaults:/etc/xdg/xdg-plasma:/etc/xdg
XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session3
LANGUAGE=
MANDATORY_PATH=/usr/share/gconf/plasma.mandatory.path
LC_ADDRESS=fr_FR.UTF-8
LC_NAME=fr_FR.UTF-8
DESKTOP_SESSION=plasma
LC_MONETARY=fr_FR.UTF-8
GTK_RC_FILES=/etc/gtk/gtkrc:/home/grum/.gtkrc:/home/grum/.config/gtkrc
XCURSOR_SIZE=24
KDE_FORK_SLAVES=1
XDG_SEAT=seat0
XDG_SESSION_DESKTOP=KDE
XDG_SESSION_TYPE=x11
GTK2_RC_FILES=/etc/gtk-2.0/gtkrc:/home/grum/.gtkrc-2.0:/home/grum/.config/gtkrc-2.0
HOME=/home/grum
LC_PAPER=fr_FR.UTF-8
LANG=en_GB.UTF-8
LS_COLORS=rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.webp=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:
XDG_CURRENT_DESKTOP=KDE
KONSOLE_DBUS_SERVICE=:1.1146
QT_EXCLUDE_GENERIC_BEARER=1
KONSOLE_DBUS_SESSION=/Sessions/3
PROFILEHOME=
XDG_SEAT_PATH=/org/freedesktop/DisplayManager/Seat0
INVOCATION_ID=84742f99bf8f4852a472912218201142
KONSOLE_VERSION=230402
MANAGERPID=1788
KDE_SESSION_UID=1000
LESSCLOSE=/usr/bin/lesspipe %s %s
XDG_SESSION_CLASS=user
PYTHONPATH=/home/grum/Travail/Dev/Sources/Python/Projects/mtui
TERM=xterm-256color
LC_IDENTIFICATION=fr_FR.UTF-8
DEFAULTS_PATH=/usr/share/gconf/plasma.default.path
LESSOPEN=| /usr/bin/lesspipe %s
USER=grum
COLORFGBG=15;0
KDE_SESSION_VERSION=5
PAM_KWALLET5_LOGIN=/run/user/1000/kwallet5.socket
DISPLAY=:0
SHLVL=2
LC_TELEPHONE=fr_FR.UTF-8
MOZ_USE_XINPUT2=1
LC_MEASUREMENT=fr_FR.UTF-8
XDG_VTNR=1
XDG_SESSION_ID=7
XDG_RUNTIME_DIR=/run/user/1000
LC_TIME=fr_FR.UTF-8
QT_AUTO_SCREEN_SCALE_FACTOR=0
JOURNAL_STREAM=8:97299
XCURSOR_THEME=breeze_cursors
XDG_DATA_DIRS=/usr/share/plasma:/home/grum/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share:/var/lib/snapd/desktop
KDE_FULL_SESSION=true
PATH=/home/grum/Applications/Systeme/Scripts:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
KDE_APPLICATIONS_AS_SCOPE=1
LC_NUMERIC=fr_FR.UTF-8
KONSOLE_DBUS_WINDOW=/Windows/1
_=/usr/bin/env
```
Comment 5 grum999 2023-08-17 18:48:16 UTC
Created attachment 161036 [details]
Touch docker

The touch docker seems to work properly
Comment 6 Bug Janitor Service 2023-08-17 18:52:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1904
Comment 7 Alvin Wong 2023-08-17 18:54:46 UTC
Can you please try the AppImage from https://invent.kde.org/graphics/krita/-/jobs/1130894 after it's been built?
Comment 8 grum999 2023-08-17 19:22:20 UTC
Running built krita-5.3.0-prealpha-c86187cd73-x86_64.appimage give me the same messages :-(

Taking a look on:
* krita-5.3.0-prealpha-a4fa5a5ccb-x86_64.appimage
 => downloaded 2023-08-10, after bug fix https://bugs.kde.org/show_bug.cgi?id=473161 
 => no error message (font or QML) 

* krita-5.3.0-prealpha-cf19feaa2f-x86_64.appimage 
 => downloaded 2023-08-17 (built today ~6.00pm)
 => error message (font and QML) 


If it can help you for a bisect search 

Grum999
Comment 9 grum999 2023-08-17 19:44:18 UTC
To be more precise 


Build #2097 (Aug 13, 2023 4:09:00 PM)
krita-5.3.0-prealpha-afb761c5d8-x86_64.appimage

==> the error message is here

So it's a commit merged between 
krita-5.3.0-prealpha-a4fa5a5ccb-x86_64.appimage (2023-08-10)
 and 
krita-5.3.0-prealpha-afb761c5d8-x86_64.appimage (2023-08-13)
Comment 10 Alvin Wong 2023-08-18 10:02:39 UTC
Git commit 9995d0b62bfb92dd87f38abd10fa7c948fe13c63 by Alvin Wong.
Committed on 18/08/2023 at 11:44.
Pushed by alvinwong into branch 'master'.

Actually load the fonts in the QML theme

Fix the warning `Could not find font QVariant(QString, "Source Sans
Pro") [...]`.  This probably had been a problem since the touch docker
was added, just hidden by the filtering from the log docker.

(Please tell me we will axe this class in favour of standard
qtquickcontrols2 theming?)

M  +12   -5    libs/libqml/Theme.cpp

https://invent.kde.org/graphics/krita/-/commit/9995d0b62bfb92dd87f38abd10fa7c948fe13c63
Comment 11 Alvin Wong 2023-08-18 10:02:47 UTC
Git commit dced143edfa2c297221e08883348e9d20a9a62d1 by Alvin Wong.
Committed on 18/08/2023 at 11:44.
Pushed by alvinwong into branch 'master'.

Try loading QML theme from the correct dir for Linux

M  +3    -0    libs/libqml/Theme.cpp

https://invent.kde.org/graphics/krita/-/commit/dced143edfa2c297221e08883348e9d20a9a62d1
Comment 12 Alvin Wong 2023-08-18 10:04:28 UTC
Git commit 1b6a930ab70ad698c85bc80966e00faced58ca46 by Alvin Wong.
Committed on 18/08/2023 at 12:04.
Pushed by alvinwong into branch 'krita/5.2'.

Try loading QML theme from the correct dir for Linux
(cherry picked from commit dced143edfa2c297221e08883348e9d20a9a62d1)

M  +3    -0    libs/libqml/Theme.cpp

https://invent.kde.org/graphics/krita/-/commit/1b6a930ab70ad698c85bc80966e00faced58ca46
Comment 13 Alvin Wong 2023-08-18 10:04:36 UTC
Git commit 6788680704627c636cbb94e71cb9bfbc1322af9a by Alvin Wong.
Committed on 18/08/2023 at 12:04.
Pushed by alvinwong into branch 'krita/5.2'.

Actually load the fonts in the QML theme

Fix the warning `Could not find font QVariant(QString, "Source Sans
Pro") [...]`.  This probably had been a problem since the touch docker
was added, just hidden by the filtering from the log docker.

(Please tell me we will axe this class in favour of standard
qtquickcontrols2 theming?)
(cherry picked from commit 9995d0b62bfb92dd87f38abd10fa7c948fe13c63)

M  +12   -5    libs/libqml/Theme.cpp

https://invent.kde.org/graphics/krita/-/commit/6788680704627c636cbb94e71cb9bfbc1322af9a
Comment 14 grum999 2023-08-18 10:56:40 UTC
Hi

Not sure to understand the log docker relation ship, but with last build (krita-5.3.0-prealpha-9995d0b62b-x86_64.appimage) the messages are not here anymore! :) 

These one are still here:
```
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
QObject::connect: No such signal QQmlSizeValueType::destroyed(QObject *)
QObject::connect: No such signal QQuickFontValueType::destroyed(QObject *)
```
Do I open a dedicated bugs for them?