Actually load the fonts in the QML theme

Fix the warning `Could not find font QVariant(QString, "Source Sans
Pro") [...]`.  This probably had been a problem since the touch docker
was added, just hidden by the filtering from the log docker.

(Please tell me we will axe this class in favour of standard
qtquickcontrols2 theming?)

BUG:473478
(cherry picked from commit 9995d0b62bfb92dd87f38abd10fa7c948fe13c63)